--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Sergio Righini</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
